0.5.0
- Change: Change FE display for price = 0 (#390)
- Change: Remove "times and places" from the list view (#652)
- Fix: Problem with creation of new event records (#648)
- Change: Allow to show the subtitle in the list view (#647)
- Fix: mod2: escape the & to &amp; in the delete icon links (#624)
- Change: Removed the "This feature is new" message from the config check (#388)
- Feature: CSV-export of registrations from the BE in mod2 (#525)
- Change: Lower the TYPO3 version requirement to 3.7 (#631)
- Change: Add two additional price fields to the event record (#549)
- Feature: Add teasers to the event records (#625)
- Change: Changed localization to have a ":" after each label in the BE (#571)
- Change: Add 3 additional "speaker" fields in the event record (#550)
- Fix: Allow for searching also within organizer names (#352)
- Fix: Corrected error message on my_events page when not logged in (#529)
- Change: Rework the order of tabs when BE-editing events (#578)
- Change: BE editing of event records: Move "registration necessary" and "multiple registration allowed" to the "registration" tab (#562)
- Change: Statistics are updated on every change of event records (#242)
- Fix: In mod1 and mod2, lowercase POST (#597)
- Fix: Configuration check on the wrong object in pi1::createRegistrationsList() (#584)
- Fix: Typo in pi1/locallang.xml (#583)
- Feature: CSV export for registrations: data structures and architectural stuff (#313)
- Feature: Add integer field "number of kids" to the attendance record, the registration form, the thank-you and notification e-mails (#452)
- Feature: Add data type "food type" and allow to select records in the event records and in the registration form (#449, #450)
- Feature: Add data type "lodging" and allow to select records in the event records and in the registration form (#445, #446)
- Change: BE editing of event records: Only show the registration-related fields if registration is enabled for this event (#575)