@@ -1,4 +1,5 @@
 0.5.0
+- Change: Move the "allow multiple registrations" and "needs registration" checkboxes from the date records to the topic records (#651)
 - Change: Change FE display for price = 0 (#390)
 - Change: Remove "times and places" from the list view (#652)
 - Fix: Problem with creation of new event records (#648)
